--- a/exampleSite/config/_default/languages.toml
+++ b/exampleSite/config/_default/languages.toml
@@ -29,11 +29,11 @@ footer_content = "Lorem ipsum dolor sit amet, consectetur elit. Consjat tristiqu
 copyright = "Design von [Themefisher](https://themefisher.com/) Entwickelt von [Gethugothemes](https://gethugothemes.com/)"
 
 ############################# Deutsch ############################
-[nl]
-languageName = "Nl"
+[de]
+languageName = "De"
 title = "Bigspring Hugo"
 contentDir = "content/deutsch" # content/german
-weight = 2
+weight = 3
 ########### footer content ##########
 footer_menu_left = "Firma"
 footer_menu_middle = "Produkte"
